Enlarge message container margin to make sure shadow is not cut off by web view ( 80px height )

--- a/components/styles.css
+++ b/components/styles.css
@@ -31,11 +31,11 @@
 
 .td-message-container {
 	width: 100%;
-	margin: 5px auto;
+	margin: 10px auto;
 	text-align: left;
 	background: #fff;
 	border-radius: 10px;
-	box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.25);
+	box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.25);
 }
 
 div.td-message-container {
